# ESE-Smart-Intersection

./: README.md  Scheduling  car.cpp  intersection.cpp  intersection.h  pedestrian.h  street.h
Diagrams/: constrain. diagram.eapx  sequence-EA.qea  sequence-EA.rar
simulation/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md  car.cpp  car.h  commands.txt  controller.cpp  controller.h  intersection.cpp  intersection.h  main.cpp  myapp  myprogram  pedestrian.cpp  pedestrian.h  street.cpp  street.h  unit-test.cpp  your_executable
simulation/old sim/: car.cpp  car.h  controller.h  main.cpp  main2.cpp  myprogram  pedestrian.h  street.cpp  street.h
simulation/sim/: main.cpp  myprogram
simulation/src/: car.h  controller.h  intersection.h  main.cpp  myapp  pedestrian.h  priority.json  sensor.h  street.h  streets.json
simulation/tests/: CMakeLists.txt  tests.cpp
tinkercad/: Spectacular Turing.brd  Untitled Document 1  car.cpp  controller.cpp  emergency.cpp  pedestrian.cpp  spectacular_turing1.ino  spectacular_turing2.ino  spectacular_turing3.ino  spectacular_turing4.ino
